--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorPrimaryDark">@color/mulled_wine</color>
+    <color name="colorAccent">@color/white</color>
     <color name="bright_pink">#FC146E</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
@@ -11,4 +11,5 @@
     <color name="translucent">#40000000</color>
     <color name="transparent">#00000000</color>
     <color name="ufo_green">#46e277</color>
+    <color name="mulled_wine">#534c5f</color>
 </resources>
