--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,58 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="BodyXlBoldBlack">
-        <item name="android:gravity">end</item>
-        <item name="android:textSize">23sp</item>
-        <item name="android:fontFamily">sans-serif-black</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">1sp</item>
-        <item name="android:textColor">#000000</item>
-    </style>
-
-    <style name="H1Headline">
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">22sp</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">#000000</item>
-    </style>
-
-    <style name="BodyMLight">
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">sans-serif-light</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:letterSpacing">0.01</item>
-        <item name="android:lineSpacingExtra">6sp</item>
-        <item name="android:textColor">#000000</item>
-    </style>
-
-    <style name="BodyLMediumWhite">
-        <item name="android:textSize">16sp</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">4sp</item>
-        <item name="android:textColor">#ffffff</item>
-    </style>
-
-    <style name="BodyMMedium">
-        <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">6sp</item>
-        <item name="android:textColor">#ffffff</item>
-    </style>
-
-    <style name="ToolbarIconImageView" parent="ToolbarIconImageViewVersionIndependent">
-        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
-    </style>
-
-    <style name="ToolbarIconImageViewVersionIndependent">
-        <item name="android:layout_width">@dimen/material_app_bar_icon_action_size</item>
-        <item name="android:layout_height">@dimen/material_app_bar_icon_action_size</item>
-        <item name="android:padding">10dp</item>
-        <item name="android:clickable">true</item>
+    <style name="EditTextStyle">
+        <item name="android:paddingStart">@dimen/material_baseline_grid_2x</item>
+        <item name="android:paddingEnd">@dimen/material_baseline_grid_3x</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:background">@drawable/transparent_rouded_background_with_gray_outline_4dp</item>
+        <item name="android:layout_height">@dimen/material_baseline_grid_6x</item>
     </style>
 
 </resources>
