--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,35 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mulled_wine">
+    android:animateLayoutChanges="true"
+    android:background="@color/mulled_wine"
+    android:orientation="vertical"
+    android:paddingStart="@dimen/login_screen_side_margin"
+    android:paddingTop="@dimen/login_screen_top_margin"
+    android:paddingEnd="@dimen/login_screen_side_margin">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/login_screen_side_margin" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/login_screen_side_margin" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineTop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="@dimen/login_screen_top_margin" />
 
     <ImageView
         android:id="@+id/logoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/guidelineTop"
@@ -39,6 +25,7 @@
         android:id="@+id/screenTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/material_baseline_grid_3x"
         android:fontFamily="sans-serif"
         android:text="@string/login_screen_title"
@@ -51,54 +38,93 @@
     <EditText
         android:id="@+id/emailEditText"
         style="@style/EditTextStyle"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_marginTop="@dimen/material_baseline_grid_5x"
         android:hint="@string/login_screen_email_address_hint"
+        android:imeOptions="actionNext"
+        android:inputType="textEmailAddress"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="@id/guidelineRight"
         app:layout_constraintStart_toStartOf="@id/guidelineLeft"
         app:layout_constraintTop_toBottomOf="@id/screenTitleTextView" />
 
-    <EditText
-        android:id="@+id/passwordEditText"
-        style="@style/EditTextStyle"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/material_baseline_grid_2x"
-        android:hint="@string/login_screen_password_hint"
-        android:paddingEnd="@dimen/material_baseline_grid_6x"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+    <TextView
+        android:id="@+id/emailErrorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/material_baseline_grid_1x"
+        android:layout_marginTop="@dimen/material_baseline_grid_1x"
+        android:text="@string/error_invalid_email"
+        android:textColor="@color/material_color_red_primary"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/emailEditText"
         app:layout_constraintTop_toBottomOf="@id/emailEditText" />
 
-    <ImageView
-        android:id="@+id/togglePasswordButton"
-        android:layout_width="@dimen/material_baseline_grid_4x"
-        android:layout_height="@dimen/material_baseline_grid_4x"
-        android:paddingStart="@dimen/material_baseline_grid_2x"
-        android:paddingTop="@dimen/material_baseline_grid_1x"
-        android:paddingBottom="@dimen/material_baseline_grid_1x"
-        android:clickable="true"
-        android:focusable="true"
-        android:layout_marginEnd="@dimen/material_baseline_grid_3x"
-        app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
-        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
-        app:layout_constraintTop_toTopOf="@id/passwordEditText"
-        app:srcCompat="@drawable/ic_show_password" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="0dp"
+        <EditText
+            android:id="@+id/passwordEditText"
+            style="@style/EditTextStyle"
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/material_baseline_grid_2x"
+            android:hint="@string/login_screen_password_hint"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:paddingStart="@dimen/material_baseline_grid_2x"
+            android:paddingEnd="@dimen/material_baseline_grid_6x"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/togglePasswordButton"
+            android:layout_width="@dimen/material_baseline_grid_4x"
+            android:layout_height="@dimen/material_baseline_grid_4x"
+            android:layout_marginEnd="@dimen/material_baseline_grid_3x"
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingStart="@dimen/material_baseline_grid_2x"
+            android:paddingTop="@dimen/material_baseline_grid_1x"
+            android:paddingEnd="0dp"
+            android:paddingBottom="@dimen/material_baseline_grid_1x"
+            app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
+            app:layout_constraintEnd_toEndOf="@id/passwordEditText"
+            app:layout_constraintTop_toTopOf="@id/passwordEditText"
+            app:srcCompat="@drawable/ic_show_password" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/material_baseline_grid_2x"
-        android:background="@drawable/green_rounded_button_4dp"
-        android:fontFamily="sans-serif"
-        android:text="@string/login_button_text"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
+        android:layout_marginTop="@dimen/material_baseline_grid_2x">
+
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/green_rounded_button_4dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/login_button_text"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="@dimen/material_baseline_grid_4x"
+            android:layout_height="@dimen/material_baseline_grid_4x"
+            android:elevation="@dimen/material_baseline_grid_2x"
+            android:theme="@style/WhiteAppTheme"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/loginButton"
+            app:layout_constraintEnd_toEndOf="@id/loginButton"
+            app:layout_constraintStart_toStartOf="@id/loginButton"
+            app:layout_constraintTop_toTopOf="@id/loginButton" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
