--- a/app/src/main/res/layout/fragment_success.xml
+++ b/app/src/main/res/layout/fragment_success.xml
@@ -1,32 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mulled_wine"
-    tools:context=".fragment.ProgressFragment">
+    android:background="@color/mulled_wine">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/ToolbarNoInset"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
+        app:title="@string/app_name"
+        app:titleTextColor="@color/white" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/progress_screen_side_margin" />
+        app:layout_constraintGuide_begin="@dimen/success_screen_side_margin" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/progress_screen_side_margin" />
+        app:layout_constraintGuide_end="@dimen/success_screen_side_margin" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="@dimen/progress_screen_top_margin" />
+        app:layout_constraintGuide_begin="@dimen/success_screen_top_margin" />
 
     <ImageView
         android:id="@+id/logoImageView"
@@ -39,18 +47,17 @@
         app:srcCompat="@drawable/ic_applover" />
 
 
-    <ProgressBar
+    <TextView
         android:id="@+id/progressBar"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/material_baseline_grid_7x"
-        app:layout_constraintWidth_percent="0.7"
-        android:max="100"
-        android:progress="0"
-        android:progressDrawable="@drawable/custom_progress_bar"
+        android:fontFamily="sans-serif"
+        android:text="@string/success"
+        android:textColor="@color/white"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logoImageView"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logoImageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
