--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -10,16 +10,16 @@
         android:label="LoginFragment"
         tools:layout="@layout/fragment_login">
         <action
-            android:id="@+id/action_loginFragment_to_progressFragment"
-            app:destination="@id/progressFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
+            android:id="@+id/action_loginFragment_to_successFragment"
+            app:destination="@id/successFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_enter_anim"
-            app:popExitAnim="@anim/nav_default_exit_anim" />
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
-        android:id="@+id/progressFragment"
-        android:name="com.damiankwasniak.interview.fragment.ProgressFragment"
-        android:label="fragment_progress"
-        tools:layout="@layout/fragment_progress" />
+        android:id="@+id/successFragment"
+        android:name="com.damiankwasniak.interview.fragment.SuccessFragment"
+        android:label="SuccessFragment"
+        tools:layout="@layout/fragment_success"/>
 </navigation>
