--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">@color/mulled_wine</color>
+    <color name="colorPrimary">#534c5f</color>
+    <color name="colorPrimaryDark">#423D4D</color>
     <color name="colorAccent">@color/white</color>
     <color name="bright_pink">#FC146E</color>
     <color name="black">#000000</color>
